# message-to-receipt-printer

./: .gitignore  LICENSE  README.md
pi-client/: .env.example  pyproject.toml
pi-client/src/receipt_printer_client/: api_client.py  config.py  main.py  printer.py  text_sanitizer.py
web/api/: get_entries.php  report_print_results.php
web/config/: config.example.php  database.php
web/lib/: auth.php  rate_limit.php  response.php
web/public/: event.php  index.php  submit.php
web/sql/: create_event.sql  schema.sql
